refactor update method3
